fix spacing

--- a/frontend/src/components/Canvas/Canvas.module.scss
+++ b/frontend/src/components/Canvas/Canvas.module.scss
@@ -23,3 +23,8 @@
   align-items: center;
   margin-bottom: 20px;
 }
+
+.label {
+  margin-bottom: 15px;
+  margin-top: 35px;
+}
