--- a/frontend/src/components/Heading/Heading.module.scss
+++ b/frontend/src/components/Heading/Heading.module.scss
@@ -1,5 +1,4 @@
 .heading {
   font-size: 3.6rem;
   text-align: center;
-  padding: 0 5px;
 }
